tracing named mutex

--- a/tracing-async-mutex/Cargo.toml
+++ b/tracing-async-mutex/Cargo.toml
@@ -4,4 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+parking_lot = { workspace = true }
+serde = { workspace = true, features = ["derive", "rc"] }
 tokio = { workspace = true, features = ["sync"] }
