--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,12 +14,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Install rustfmt
+        run: rustup component add rustfmt
       - name: cargo fmt
         run: cargo fmt --check
   clippy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Install clippy
+        run: rustup component add clippy
       - name: cargo clippy
         run: |
           cargo clippy --all-targets --features eva-common/openssl-no-fips -- -W clippy::all -W clippy::pedantic \
