--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,7 @@ exclude = [
   "svc/svc-example-temp",
   "svc/svc-example-sensor-set",
   "tools/eva-lsl",
+  "tools/eva-gst",
 ]
 
 [workspace.package]
