gst logic moved to eva-common

--- a/eva-gst/Cargo.toml
+++ b/eva-gst/Cargo.toml
@@ -15,7 +15,7 @@ path = "src/lib.rs"
 atomic-timer = "0.2.2"
 binrw = "0.15.0"
 busrt = { version = "0.4.19", features = ["ipc-sync"] }
-eva-common = { version = "0.3.99", features = ["payload", "events"] }
+eva-common = { version = "0.3.100", features = ["payload", "events", "multimedia"] }
 gst = { version = "0.22", package = "gstreamer" }
 gst-base = { version = "0.22", package = "gstreamer-base" }
 gst-video = { version = "0.22", package = "gstreamer-video" }
@@ -23,7 +23,6 @@ hostname = "0.4.1"
 parking_lot = { version = "0.12.1", package = "parking_lot_rt" }
 rtsc = "0.3.15"
 serde = { version = "1.0.219", features = ["derive"] }
-strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
 
 [build-dependencies]
 gst-plugin-version-helper = "0.8"
