--- a/svc/videosink/Cargo.toml
+++ b/svc/videosink/Cargo.toml
@@ -18,3 +18,5 @@ tokio = { version = "1.36", features = ["full"] }
 
 [features]
 std-alloc = []
+openssl-vendored = ["eva-common/openssl-vendored", "eva-common/openssl-no-fips"]
+openssl3 = ["eva-common/openssl3"]
