--- a/svc/videosink/Cargo.toml
+++ b/svc/videosink/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 async-channel = "1.9"
 async-trait = "0.1"
+bma-ts = "0.1.15"
 eva-common = { version = "0.3.103", features = ["events", "common-payloads", "payload", "acl", "multimedia"] }
 eva-sdk = { version = "0.3", features = ["controller"] }
 gst = { version = "0.22", package = "gstreamer" }
@@ -13,6 +14,8 @@ gst-app = { version = "0.22", package = "gstreamer-app" }
 log = "0.4"
 mimalloc = "0.1"
 once_cell = "1.20"
+parking_lot_rt = "0.12.1"
+rtsc = "0.3.15"
 serde = { version = "1", features = ["derive", "rc"] }
 tokio = { version = "1.36", features = ["full"] }
 
