--- a/svc/videosink/Cross.toml
+++ b/svc/videosink/Cross.toml
@@ -1,7 +1,5 @@
 [target.x86_64-unknown-linux-gnu]
-image.name = "eva-videosink-build-x86_64:latest"
-image.toolchain = ["x86_64-unknown-linux-gnu"]
+image = "eva-videosink-build-x86_64:latest"
 
 [target.aarch64-unknown-linux-gnu]
-image.name = "eva-videosink-build-aarch64:latest"
-image.toolchain = ["x86_64-unknown-linux-gnu"]
+image = "eva-videosink-build-aarch64:latest"
