--- a/svc/videosink/eapi.yml
+++ b/svc/videosink/eapi.yml
@@ -1,7 +1,8 @@
 stream.info:
   des: Get info for the current stream
   par:
-  ret:
+  ret: Stream info
+  exm: |
     {
       "format": "video/x-h264",
       "fps": 15,
