--- a/svc/gst-pipeline/Cargo.toml
+++ b/svc/gst-pipeline/Cargo.toml
@@ -18,3 +18,8 @@ tokio = { version = "1.36", features = ["full"] }
 
 [features]
 std-alloc = []
+
+[profile.release]
+strip = true
+lto = true
+codegen-units = 1
