eva-shell video rec auto complete

--- a/eva-shell/Makefile
+++ b/eva-shell/Makefile
@@ -1,10 +1,10 @@
-VERSION=0.2.40
+VERSION=0.2.41
 
 all:
 	@echo "what do you want to build today?"
 
 ver:
-	find . -type f -name "*.py" -exec sed -i "s/^__version__ = .*/__version__ = '${VERSION}'/g" {} \;
+	find . -type f -name "*.py" -exec sed -i '' "s/^__version__ = .*/__version__ = '${VERSION}'/g" {} \;
 
 d: build
 
