--- a/svc/hmi/Cargo.toml
+++ b/svc/hmi/Cargo.toml
@@ -22,7 +22,7 @@ mimalloc = { workspace = true }
 once_cell = { workspace = true }
 lazy_static = { workspace = true }
 hyper = { features = ["server", "http1", "http2"] , workspace = true }
-eva-rjrpc = { version = "0.3.1", features = ["http"] }
+eva-rjrpc = { version = "0.3.3", features = ["http"] }
 bmart = { workspace = true }
 sqlx = { features = [ "runtime-tokio-native-tls" , "sqlite", "any", "mysql", "postgres" ] , workspace = true }
 futures = { workspace = true }
@@ -39,12 +39,14 @@ gettext = "0.4.0"
 hyper-static = "0.1"
 urlencoding = "2.1.3"
 openssl = { workspace = true }
-genpass-native = { path = "../../genpass-native" }
-dobj-codegen = { path = "../../dobj-codegen" }
 parking_lot = "0.12.1"
 shlex = "1.3.0"
 async-recursion = { workspace = true }
 base64 = { workspace = true }
+
+eva-internal = { path = "../../eva-internal" }
+genpass-native = { path = "../../genpass-native" }
+dobj-codegen = { path = "../../dobj-codegen" }
 
 [features]
 std-alloc = []
