--- a/svc/aaa-localauth/eapi.yml
+++ b/svc/aaa-localauth/eapi.yml
@@ -327,6 +327,10 @@ auth.user:
       typ: map<String/Any>
       des: "Extra options map (e.g. otp=code for two-factor auth)"
       req: false
+    - nam: externally_verified
+      typ: bool
+      des: "DANGEROUS: Skip password verification, assume it is already done by an external agent"
+      req: false
   ret: The method returns errors if auth is not successful
 reset.user:
   des: Resets user account (e.g. clears 2FA)
