--- a/svc/hmi/Cargo.toml
+++ b/svc/hmi/Cargo.toml
@@ -47,6 +47,7 @@ base64 = { workspace = true }
 eva-internal = { path = "../../eva-internal" }
 genpass-native = { path = "../../genpass-native" }
 dobj-codegen = { path = "../../dobj-codegen" }
+oidc-verifier = "0.1.0"
 
 [features]
 std-alloc = []
