--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
   "svc/db-influx",
   "svc/db-sql",
   "svc/db-timescale",
+  "svc/db-json",
   "svc/aaa-acl",
   "svc/aaa-otp",
   "svc/aaa-localauth",
