--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ members = [
   "svc/aaa-localauth",
   "svc/svc-expiration",
   "svc/filemgr",
+  "svc/ffi",
+  "svc/gst-pipeline",
   "svc/svc-filewriter",
   "svc/controller-enip",
   "svc/controller-modbus",
@@ -36,6 +38,7 @@ members = [
   "svc/generator",
   "svc/svc-locker",
   "svc/svc-mailer",
+  "svc/videosink",
   "tools/eva-cloud-manager",
   "tools/gen-intl",
   "dobj-codegen",
