--- a/svc/filemgr/Cargo.toml
+++ b/svc/filemgr/Cargo.toml
@@ -23,7 +23,7 @@ openssl = { workspace = true }
 glob-match = "0.2.1"
 async-recursion = { workspace = true }
 uuid = { workspace = true }
-libc = "0.2.169"
+libc = { workspace = true }
 tracing = { version = "0.1.41", features = ["log"] }
 rustix-openpty = "0.1.1"
 rustix = "0.38.44"
@@ -31,4 +31,3 @@ virtual-terminal = "0.1.1"
 
 [features]
 std-alloc = []
-openssl-vendored = ["openssl/vendored"]
