--- a/tools/eva-cloud-manager/Cargo.toml
+++ b/tools/eva-cloud-manager/Cargo.toml
@@ -15,10 +15,10 @@ path = "src/main.rs"
 
 [dependencies]
 serde = { features = ["derive", "rc"] , workspace = true }
-serde_yaml = "0.8"
+serde_yaml = { workspace = true }
 eva-common = { features = ["common-payloads", "console-logger"] , workspace = true }
-eva-client = "0.3"
-clap = { version = "3.2.22", features = ["derive"] }
+eva-client = "0.5.1"
+clap = { workspace = true, features = ["derive"] }
 tokio = { features = ["full"] , workspace = true }
 tera = "1.19.1"
 log = { workspace = true }
@@ -28,7 +28,7 @@ bmart = { workspace = true }
 atty = "0.2"
 hyper = { version = "0.14.18", features = ["client", "http1", "tcp"] }
 hyper-tls = "0.5"
-serde_json = "1.0.113"
+serde_json = { workspace = true }
 ttycarousel = { version = "0.1.4", features = ["tokio1"] }
 hex = { workspace = true }
 base64 = "0.13"
