--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,9 +24,11 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install clippy
         run: rustup component add clippy
+      - name: Install gst
+        run: sudo apt-get update && sudo apt-get install -y libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev
       - name: cargo clippy
         run: |
-          cargo clippy --all-targets --features eva-common/openssl-no-fips -- -W clippy::all -W clippy::pedantic \
+          cargo clippy --all-targets --features eva-common/openssl-vendored -- -W clippy::all -W clippy::pedantic \
           -A clippy::used-underscore-binding \
           -A clippy::doc_markdown \
           -A clippy::needless_pass_by_value \
