--- a/eva-gst/Cargo.toml
+++ b/eva-gst/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "eva-gst"
-version = "0.1.3"
-edition = "2021"
+version = "0.2.0"
+edition = "2024"
 description = "EVA-ICS GStreamer plugins"
 repository = "https://github.com/eva-ics/eva4"
 publish = false
@@ -14,21 +14,16 @@ path = "src/lib.rs"
 [dependencies]
 atomic-timer = "0.2.2"
 binrw = "0.15.0"
-busrt = { version = "0.5.21", features = ["ipc-sync", "rpc-sync", "cursors"] }
+busrt = { workspace = true, features = ["ipc-sync", "rpc-sync", "cursors"] }
 dateparser = "0.2.1"
-eva-common = { version = "0.3.117", features = ["payload", "events", "multimedia"] }
-gst = { version = "0.22", package = "gstreamer" }
-gst-base = { version = "0.22", package = "gstreamer-base" }
-gst-video = { version = "0.22", package = "gstreamer-video" }
-hostname = "0.4.1"
-parking_lot = { version = "0.12.1", package = "parking_lot_rt" }
-rtsc = "0.3.15"
-serde = { version = "1.0.219", features = ["derive"] }
+eva-common = { workspace = true, features = ["payload", "events", "multimedia"] }
+gst = { version = "0.24", package = "gstreamer" }
+gst-base = { version = "0.24", package = "gstreamer-base" }
+gst-video = { version = "0.24", package = "gstreamer-video" }
+hostname = { workspace = true }
+parking_lot = { workspace = true }
+rtsc = { workspace = true }
+serde = { workspace = true, features = ["derive"] }
 
 [build-dependencies]
 gst-plugin-version-helper = "0.8"
-
-[profile.release]
-strip = true
-lto = true
-codegen-units = 1
