--- a/svc/aaa-otp/Cargo.toml
+++ b/svc/aaa-otp/Cargo.toml
@@ -18,7 +18,7 @@ mimalloc = { workspace = true }
 openssl = { workspace = true }
 hex = { workspace = true }
 bmart = { workspace = true }
-boringauth = "0.9.0"
+libreauth = "0.18"
 base32 = "0.4.0"
 
 [features]
