--- a/svc/controller-system/justfile
+++ b/svc/controller-system/justfile
@@ -7,12 +7,12 @@ clean:
 bump:
 	expr `cat build.number` + 1 > build.number
 
-compile-musl-x86_64:
-	CARGO_TARGET_DIR=target-x86_64-musl cross build --target x86_64-unknown-linux-gnu \
+compile-x86_64:
+	CARGO_TARGET_DIR=target-x86_64 cross build --target x86_64-unknown-linux-gnu \
 					 --release --no-default-features --features agent-linux,openssl-vendored
 
-compile-musl-aarch64:
-	CARGO_TARGET_DIR=target-aarch_64-musl cross build --target aarch64-unknown-linux-gnu \
+compile-aarch64:
+	CARGO_TARGET_DIR=target-aarch_64 cross build --target aarch64-unknown-linux-gnu \
 					 --release --no-default-features --features agent-linux,openssl-vendored
 
 compile-windows:
@@ -25,7 +25,7 @@ compile-windows:
 
 debian-pkg:
 	mkdir -p _build
-	cd make-deb && TARGET_DIR=target-x86_64-musl PACKAGE=eva-cs-agent ./build.sh && mv *.deb ../_build/
+	cd make-deb && TARGET_DIR=target-x86_64 PACKAGE=eva-cs-agent ./build.sh && mv *.deb ../_build/
 
 release:
 	./release.sh
