allow svc methods to be string for wildcard

--- a/share/svc-tpl/svc-tpl-mcp.yml
+++ b/share/svc-tpl/svc-tpl-mcp.yml
@@ -17,6 +17,5 @@ config:
     #eva.repl.default:
       #- test
       #- node.list
-    #eva.svc.test:
-      # - "*"
+    #eva.svc.test: "*"
 user: nobody
