--- a/share/svc-tpl/svc-tpl-mcp.yml
+++ b/share/svc-tpl/svc-tpl-mcp.yml
@@ -19,6 +19,7 @@ config:
   #allow:
     #eva.core:
       #- test
+      #- item.summary
       #- item.list
       #- item.state
     #eva.repl.default:
